- In the Scholarium, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Gold Road Chapter. Skingrad, Ontus and Vashabar are now recognized as cities.
- Mirrormoor Mosaic sites are now recognized as same as Dolmens.
- Updated bundled LibEventHandler version to 1.3.5 (AddOnVersion: 1305).

Version 1.6.91 : by Calamath
[LoreWear]
- Fixed an issue where the player character would not change clothes after dismounting since Necrom.

Version 1.6.90 : by Calamath
[LorePlay]:Necrom support
- In the wilderness of Telvanni Peninsula, the add-on automatically recognizes you are in the adventure zone.
- Apocrypha in the realm of Oblivion, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Necrom Chapter. Necrom is now recognized as a city.
- Updated bundled LibEventHandler version to 1.3.3 (AddOnVersion: 1303).
- Updated API version to 101038 (ESO 9.0.x : Necrom)

Version 1.6.89 : by Calamath
[LorePlay]:Firesong support
- Simplified Chinese language support
- Fixed Spanish localization issue.
- In the wilderness of Galen and Y'ffelon, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Firesong DLC. Vastyr is now recognized as a city.
- Updated bundled LibEventHandler version to 1.3.1 (AddOnVersion: 1301).
- Updated API version to 101036 (ESO 8.2.x : Firesong)

Version 1.6.88 : by Calamath
[LorePlay]:Lost Depths support
- Overhauled the location recognition engine to accommodate the in-game mechanics of Update 35.
- Adjusted location database of Vivec City.
- Added nil check to LPEmoteHandler in case there is no slash command corresponding to the emoteIndex.
- Updated bundled LibEventHandler version to 1.3.0 (AddOnVersion: 1300).
- Updated API version to 101035 (ESO 8.1.x : Lost Depths)

Version 1.6.87 : by Calamath
[LorePlay]:High Isle support
- High Isle and Amenos, the add-on automatically recognizes you are in the adventure zone.