@@ -11,6 +11,9 @@ NOTE : this modified version is still under the Artistic License 2.0
 - Mirrormoor Mosaic sites are now recognized as same as Dolmens.
 - Updated bundled LibEventHandler version to 1.3.5 (AddOnVersion: 1305).
 
+[LoreWear]
+- Fixed an issue where the player character would not change clothes correctly after recalling out to the same house while swimming in a wetsuit.
+
 Version 1.6.91 : by Calamath
 [LoreWear]
 - Fixed an issue where the player character would not change clothes after dismounting since Necrom.
